alignment fixes

--- a/src/app/post/post.page.scss
+++ b/src/app/post/post.page.scss
@@ -1,17 +1,15 @@
-ion-title{
-
+ion-title {
     border: none;
-    font-family: Inter ;
-	font-style: normal ;
-	font-weight: bold ;
-	font-size: 16px ;
-	display: flex ;
-	align-items: center ;
-	color: #263238 ;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    color: #263238;
 }
 
-.tag{
-
+.tag {
     font-family: monospace;
     padding-right: 1%;
     font-size: 16px;
@@ -19,45 +17,10 @@ ion-title{
     font-weight: bold;
     margin-left: 1%;
     margin-right: 1%;
-    margin-top:2%;
+    margin-top: 2%;
     margin-bottom: 2%;
 }
-    .tag1{
-        left: 2%;
-        font-size: 16px;
-        box-sizing: border-box;
-        border-radius: 10px;
-        padding-left: 0%;
-        margin-left: 1%;
-        margin-right: 5%;
-        border:0.2px solid #000000;
-        width: auto;
-        height: 60px;
-        font-family: monospace;
-        font-weight: bold;
-        
-    }
-    .information{
-        font-size: 16px;
-        font-weight: bold;
-
-        font-family: monospace;
-
-        font-family: monospace;
-
-        font-size: 16px;
-        padding-left: 1%;
-        font-weight: bold;
-        margin-left: 1%;
-        margin-right: 5%;
-        margin-top:2%;
-        width: auto;
-        margin-bottom: 2%;
-        
-    }
-
-    .inform
-{
+.tag1 {
     left: 2%;
     font-size: 16px;
     box-sizing: border-box;
@@ -65,47 +28,75 @@ ion-title{
     padding-left: 0%;
     margin-left: 1%;
     margin-right: 5%;
-    border:0.2px solid #000000;
+    border: 0.2px solid #000000;
+    width: auto;
+    height: 60px;
+    font-family: monospace;
+    font-weight: bold;
+}
+.information {
+    font-size: 16px;
+    font-weight: bold;
+
+    font-family: monospace;
+
+    font-family: monospace;
+
+    font-size: 16px;
+    padding-left: 1%;
+    font-weight: bold;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: 2%;
+    width: auto;
+    margin-bottom: 2%;
+}
+
+.inform {
+    left: 2%;
+    font-size: 16px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    padding-left: 0%;
+    margin-left: 1%;
+    margin-right: 5%;
+    border: 0.2px solid #000000;
     width: 450px;
     height: 100px;
     font-family: monospace;
     font-weight: bold;
 }
 
-.image{
+.image {
     font-family: monospace;
 
     font-size: 16px;
     font-weight: bold;
 
-font-size: 16px;
-padding-left: 1%;
-margin-left: 1%;
-margin-right: 1%;
-margin-top:2%;
-margin-bottom: 2%;
-    
+    font-size: 16px;
+    padding-left: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
 
-.images{
+.images {
     left: 2%;
-        font-size: 16px;
-        box-sizing: border-box;
-        border-radius: 10px;
-        padding-left: 0%;
-        margin-left: 1%;
-        margin-right: 5%;
-        border:0.2px solid #000000;
-        width: 300px;
-        height: 100px;
-        font-family: monospace;
-        font-weight: bold;
-    
+    font-size: 16px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    padding-left: 0%;
+    margin-left: 1%;
+    margin-right: 5%;
+    border: 0.2px solid #000000;
+    width: 300px;
+    height: 100px;
+    font-family: monospace;
+    font-weight: bold;
 }
 
-
-   
-.pos{
+.pos {
     left: 0px;
     font-family: monospace;
     font-weight: bold;
@@ -114,10 +105,10 @@ margin-bottom: 2%;
     position: relative;
     margin-left: 0px;
     margin-right: 0px;
-    margin-top:2%;
-    margin-bottom: 0px
+    margin-top: 2%;
+    margin-bottom: 0px;
 }
-.post{
+.post {
     left: 2%;
     font-size: 16px;
     box-sizing: border-box;
@@ -126,7 +117,7 @@ margin-bottom: 2%;
     margin-left: 1%;
     margin-top: 2%;
     margin-right: 5%;
-    border:0.2px solid #000000;
+    border: 0.2px solid #000000;
     width: 400px;
     height: 100px;
     font-family: monospace;
