--- a/src/app/settings/settings.page.scss
+++ b/src/app/settings/settings.page.scss
@@ -1,53 +1,34 @@
-.blue{
-    border:none;
-margin-left: 0px;
-margin-right: 0px;
-margin-top: 0px;
-padding-top: 10px;
-width: auto;
-height: 294px;
-border-radius: 0px 0px 12px 12px;
-
-background: #38C6E5;
-
-
-
+.blue {
+    border: none;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    padding-top: 10px;
+    width: auto;
+    height: 294px;
+    border-radius: 0px 0px 12px 12px;
+    background: #38c6e5;
 }
-.blank{
-    margin-top:30px;
+.blank {
+    margin-top: 30px;
     margin-left: 2%;
     margin-right: 2%;
     border: 0.1rem solid #000000;
     width: auto;
     height: auto;
-   
-
-
 }
-.header{
-    margin-top:30px;
+.header {
+    margin-top: 30px;
     font-size: 35px;
     color: antiquewhite;
-
 }
-.account{
+.account {
     font-weight: bolder;
-
 }
-.more{
-
+.more {
     font-weight: bolder;
 }
 
-.border{
-  
---border-color: black;
-
+.border {
+    --border-color: black;
 }
-
-
-
-
-
-
-
